--- a/Stil.css
+++ b/Stil.css
@@ -1,13 +1,12 @@
 body{
-    background-image: linear-gradient(to top right, darkblue, lightblue , white, wheat);
+    background-image: linear-gradient(to top right, wheat, lightblue , pink, wheat);
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     color:darkcyan;
-    font-size: x-large;
-    font-family: arial;
-    align-items: baseline;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    align-items: center;
 }
 
 .header{
@@ -43,16 +42,29 @@ h1{
     
 }
 
+.information{
+    background: rgba(0,0,0,0.2);
+    box-shadow: 7px 6px 100px 10px rgba(0,0,0,.5);
+    border-radius: 40px;    
+    padding-left: 25px;
+    padding-right: 10px;
+    align-items: center;
+    align-content: center;
+    color: white;
+    display: flex;
+}
+
+
 a{
     text-decoration: none;
     color: darkcyan;
 }
 
- .calculator {
+.calculator {
     background: #222;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.7);
     text-align: center;
 }
 .display {
@@ -93,9 +105,34 @@ button:hover {
     background: #e08900;
 }
 
+
+.board {
+    background-color: black;
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-gap: 5px;
+    margin-top: 20px;
+    padding: 10px;
+}
+.cell {
+    width: 100px;
+    height: 100px;
+    background: black;
+    border: 2px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    cursor: pointer;
+    color: white;
+}
+.cell.taken {
+    cursor: not-allowed;
+}
+
 #backButton{
-    background-color: aqua;
-    border-color: white;
+    background-color: pink;
+    border-color: wheat;
     justify-content: center;
     align-items: center;
     width: 40px;
@@ -107,4 +144,21 @@ button:hover {
 #ICON{
     width: 70px;
     border-radius: 20%;
+}
+
+#resetGame{
+color: white;
+}
+
+#status{
+    color: white;
+    background: rgba(0,0,0,0.2);
+    box-shadow: 7px 6px 100px 10px rgba(0,0,0,.5);
+    border-radius: 40px;    
+    padding-right: 25px;
+    padding-right: 10px;
+    align-items: center;
+    align-content: center;
+    margin-top: 20px;
+    font-size: 1.5em;
 }
