--- a/Stil.css
+++ b/Stil.css
@@ -29,17 +29,18 @@ h1{
     width: 85%;
     max-width: 250px;
     max-height: 250px;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto;
     display: grid;
 }
-
 .container-items{
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 20px;
     font-weight: 700;
-    
+   padding-right: 100px;
+   padding-right: 120px;
+   padding-bottom: 100px;
 }
 
 .information{
@@ -48,12 +49,10 @@ h1{
     border-radius: 40px;    
     padding-left: 25px;
     padding-right: 10px;
-    align-items: center;
-    align-content: center;
     color: white;
     display: flex;
+    margin-right: -165px;
 }
-
 
 a{
     text-decoration: none;
@@ -107,15 +106,17 @@ button:hover {
 
 
 .board {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     display: grid;
     grid-template-columns: repeat(3, 100px);
     grid-gap: 5px;
     margin-top: 20px;
+    border-radius: 15%;
     padding: 10px;
 }
 .cell {
     width: 100px;
+    border-radius: 40%;
     height: 100px;
     background: black;
     border: 2px solid white;
@@ -143,7 +144,7 @@ button:hover {
 
 #ICON{
     width: 70px;
-    border-radius: 20%;
+    border-radius: 5%;
 }
 
 #resetGame{
